--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,7 +119,7 @@ body {
     justify-content: space-around;
     flex: 1
 }
-.about-me, .Horiseon, .Run-Buddy, .contact {
+.about-me, .Horiseon, .Run-Buddy, .CarBnb, .contact {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -130,7 +130,7 @@ body {
     justify-content: space-around;
     flex: 1
 }
-.about-me img, .Horiseon img, .Run-Buddy img {
+.about-me img, .Horiseon img, .Run-Buddy img, .Carbnb Img {
     max-height: 200px;
 }
 
